--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,15 +6,15 @@ layout: default
 {{ content }}
 </div>
 
-<div class="list">
-    <h3>Related posts</h3>
-    <nav>
-      <ul>
-          {% for post in site.related_posts limit:3 %}
-          <li>
-              <span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a>
-          </li>
-          {% endfor %}
-      </ul>
-    </nav>
-</div>
+<!--<div class="list">-->
+    <!--<h3>Related posts</h3>-->
+    <!--<nav>-->
+      <!--<ul>-->
+          <!--{% for post in site.related_posts limit:3 %}-->
+          <!--<li>-->
+              <!--<span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a>-->
+          <!--</li>-->
+          <!--{% endfor %}-->
+      <!--</ul>-->
+    <!--</nav>-->
+<!--</div>-->
