Add gitlab to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,14 +4,15 @@
             <ul>
                 <li>blog@ploth.xyz</li>
                 <li>bitcoin address:</li>
+                <li><a class="footer"href="https://gitlab.com/ploth">gitlab.com/ploth</a></li>
                 <li><a class="footer"href="https://github.com/ploth">github.com/ploth</a></li>
+                <li><a class="footer"href="{{ site.url }}/legal.html">legal notice</a></li>
             </ul>
         </div>
         <div style=float:left;>
             <ul>
                 <li><a class="footer"href="{{ site.url }}/pgp.txt">0x6ECB08235527E78EE3BC076AEB6708453986F4E8</a></li>
                 <li>3Km3SbBdcLn3gWFophyaQyPcwTDsKPyTSk</li>
-                <li><a class="footer"href="{{ site.url }}/legal.html">legal notice</a></li>
             </ul>
         </div>
     </div>
