--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,19 @@
 <div class="footer">
     <div style=overflow:hidden;>
-        <div style=width:150px;float:left;>
+        <div style=width:200px;float:left;>
             <ul>
+                <li>@ploth:matrix.org</li>
                 <li>blog@ploth.xyz</li>
-                <li>bitcoin address:</li>
                 <li><a class="footer"href="https://gitlab.com/ploth">gitlab.com/ploth</a></li>
                 <li><a class="footer"href="https://github.com/ploth">github.com/ploth</a></li>
+                <li></li>
                 <li><a class="footer"href="{{ site.url }}/legal.html">legal notice</a></li>
+            </ul>
+        </div>
+        <div style=width:80px;float:left;>
+            <ul>
+                <li>pgp:</li>
+                <li>bitcoin:</li>
             </ul>
         </div>
         <div style=float:left;>
