--- a/css/main.css
+++ b/css/main.css
@@ -2,9 +2,9 @@
     --meta: #aaa;
     --title: #a00;
     --personal: #8085C1;
-    --link: #00a;
+    --link: #0a0;
     --hover: black;
-    --visited: #a0a;
+    --visited: black;
     --highlight: #f9f9f9
 }
 
