--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,8 @@
 :root {
-    --meta: #aaa;
-    --title: #a00;
-    --personal: #8085C1;
-    --link: #0a0;
-    --hover: black;
-    --visited: black;
-    --highlight: #f9f9f9
+    --cblack: #000;
+    --cgrey: #aaa;
+    --cred: #a00;
+    --cpurple: #88C;
 }
 
 body {
@@ -30,7 +27,7 @@ body {
 .header .title a {
     font-size: xx-large;
     text-decoration: none;
-    color: var(--title);
+    color: var(--cred);
 }
 
 .header .menu {
@@ -40,11 +37,11 @@ body {
 .header .menu a {
     margin-left: 20px;
     text-decoration: none;
-    color: var(--meta);
+    color: var(--cgrey);
 }
 
 .header .menu a:hover {
-    color: var(--hover);
+    color: var(--cblack);
 }
 
 .list {
@@ -57,19 +54,19 @@ body {
 }
 
 .list span {
-    color: var(--meta);
+    color: var(--cgrey);
 }
 
 .list a {
-    color: var(--link);
+    color: var(--cpurple);
 }
 
 .list a:hover {
-    color: var(--hover);
+    color: var(--cpurple);
 }
 
 .list a:visited {
-    color: var(--visited);
+    color: var(--cpurple);
 }
 
 .post {
@@ -78,12 +75,12 @@ body {
 }
 
 .footer {
-    color: var(--hover);
+    color: var(--cpurple);
     font-size: 90%;
 }
 
 .footer a {
-    color: var(--personal);
+    color: var(--cpurple);
 }
 
 .footer ul {
