Hover color for footer links

--- a/css/main.css
+++ b/css/main.css
@@ -84,7 +84,11 @@ a:visited {
 }
 
 .footer a {
-    color: var(--cdarkblue);
+    color: var(--cgrey);
+}
+
+.footer a:hover {
+    color: var(--cblack);
 }
 
 .footer ul {
