Add rouge background highlight

--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,3 +1,6 @@
+/* Rouge highlighter */
+.highlighter-rouge  { background: var(--highlight); }
+/* Code highlight */
 .highlight  { background: var(--highlight); }
 .highlight .c { color: #999988; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
